[ni] Refine cli metadata